2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amgetconf.pl: Add build.amperldir
	* perl/Amanda/Paths.pm.in: Export $amperldir

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: Add storage to message
	* server-src/amtape.pl: Use storage AUTOLABEL
	* server-src/amcheck-device.pl: Use storage AUTOLABEL
	* server-src/amcheck.c: Use storage RUNTAPES and policy
	  retention-tapes
	* server-src/driverio.c: Use storage tapetype

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/deb/amanda-backup-client.dirs,
	  packaging/deb/amanda-backup-client.install,
	  packaging/deb/amanda-backup-server.install:
	  s#usr/libexec/amanda#usr/lib/x86_64-linux-gnu/amanda#
	* packaging/deb/rules:
	  Set LIBDIR to $(PREFIX)/lib/$(triplet) on x86_64-linux-gnu
	  Set LIBEXECDIR to $(LIBDIR)

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix for '/' in prefix, fix for port in S3-HOST

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (startup_dump): Fix reversed test

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts <tibbs@math.uh.edu>
	* server-src/diskfile.c (optionstr): Make sure options string
	  begins with a semicolon

2017-01-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-custom-compress-not-found.pl: Call
	  check_amreport with skip_size

2017-01-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsdtcp-security.c (bsdtcp_accept): Send early error
	  message to the socket

2017-01-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driverio.h (sched_t): remove nb_flush
	* server-src/driver.c (read_flush): Add a different sched_t for each
	  storage
	* installcheck/success-dumper-chunker+2taper-flush.pl: fix

2017-01-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse 'active-storage' setting